markup/modules/production/production.styl
.detached-screen__production
  background-color: #ffffff;
  min-height: 100%
  padding-bottom: 0 !important
  .footer
    margin-top: 0 !important;

.l-restrictor__production
    background: #e3e3e3
    max-width: 1920px;

.production-machine
  top: 120px
  text-align:center
  width:100%

.content-title_production
  margin-bottom: 0 !important

.proguction-machine_img
  display: block
  max-width: 1920px
  width: 100vw

  @media only screen and (max-width: $palmtopWidth)
    max-width: 100%;

.detached-screen_machine
  background: url("../img/general/machine-ulsp.png") no-repeat center
  background-size contain
  position: absolute
  height: 100%
  width: 100%

.production-content_btn
  background rgba(255, 255, 255, .6)
  box-sizing border-box
  border 1px solid $colorRed
  border-radius: 60px
  color $colorRed;
  display: block
  font-family: $AvenirDemi
  font-size: 18px
  margin: 0 auto -10px
  position: relative;
  min-height 64px
  line-height 64px
  text-align: center
  transition background 50ms
  top: -120px
  text-decoration: none
  max-width: 304px;
  width 100%
  &:hover
    background #da0018
    color #ffffff
    transition background 50ms, color 50ms
  &:focus
    outline none
  // &:after
  //   content ''
  //   background: url('../img/general/icon-arrow-right.svg')no-repeat center;
  //   height: 20px
  //   position: absolute
  //   right: 30px
  //   top 30px
  //   width: 12px

@media (max-width: 600px)
  .production-content_btn
    font-size: 16px
    line-height: 20px

@media (max-width: 553px)
  .production-content_btn:after
    top: 40px

@media (max-width: 500px)
  .production-content_btn:after
    top: 30px

@media (max-width: 465px)
  .production-content_btn:after
    top: 40px

@media (max-width: $smallPhoneWidth)
  .production-content_btn
    padding: 20px 20px 20px 10px

  .production-content_btn:after
    top: 30px
    right: 10px

